--- a/test-button.html
+++ b/test-button.html
@@ -3,72 +3,142 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Beam Button Demo</title>
+  <title>Spark Button Demo</title>
   <style>
+    :root {
+      --transition: 0.25s;
+      --spark: 1.8s;
+      --speed: 1.2s;
+    }
+
     body {
-      display: flex;
-      height: 100vh;
       margin: 0;
+      height: 100vh;
+      display: flex;
       align-items: center;
       justify-content: center;
       background: #222;
+      font-family: sans-serif;
     }
-    .beam-button {
-      position: relative;
-      padding: 1rem 2rem;
-      font-size: 1.25rem;
-      color: #fff;
-      background: #333;
-      border: none;
-      border-radius: 8px;
+    .spark-button {
+      --cut: 0.1em;
+      --active: 0;
+      --bg: 
+        radial-gradient(
+          40% 50% at center 100%,
+          hsl(270 0% 72% / 0.05),
+          transparent
+        ),
+        radial-gradient(
+          80% 100% at center 120%,
+          hsl(260 0% 70% / 0.1),
+          transparent
+        ),
+        #d18237;
+      background: var(--bg);
+
+      font-size: 1rem;
+      font-weight: 500;
+      border: 0;
       cursor: pointer;
+      padding: 0.8em 1.9em;
+      display: grid;
+      place-items: center;
+      white-space: nowrap;
+      border-radius: 100px;
+      position: relative;
       overflow: hidden;
+
+      transition: box-shadow var(--transition), scale var(--transition), background var(--transition);
+      scale: calc(1 + (var(--active) * 0.1));
     }
-    .beam-container {
+
+    .spark-button:active {
+      scale: 1;
+    }
+
+    .spark__container {
       position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
+      inset: 0;
+      overflow: hidden;
+      border-radius: 100px;
       pointer-events: none;
-      z-index: 1;
     }
-    .beam {
+
+    .spark {
       position: absolute;
-      top: 50%; left: 50%;
-      width: 200%; height: 200%;
-      background: linear-gradient(
-        to right,
-        rgba(255,255,255,0) 0%,
-        rgba(255,255,255,0.8) 50%,
-        rgba(255,255,255,0) 100%
-      );
-      transform: translate(-50%, -50%) rotate(0deg);
-      animation: spinBeam 2s linear infinite;
+      inset: 0;
+      border-radius: 100px;
+      overflow: hidden;
+      mask: linear-gradient(white, transparent 50%);
+      animation: flip calc(var(--spark) * 2) infinite steps(2, end);
     }
-    @keyframes spinBeam {
-      to { transform: translate(-50%, -50%) rotate(360deg); }
+
+    @keyframes flip {
+      to { rotate: 360deg; }
     }
+
+    .spark:before {
+      content: "";
+      position: absolute;
+      width: 200%;
+      aspect-ratio: 1;
+      inset: 0 auto auto 50%;
+      z-index: -1;
+      translate: -50% -15%;
+      transform: rotate(-90deg);
+      opacity: calc((var(--active)) + 0.4);
+      background: conic-gradient(from 0deg, transparent 0 340deg, white 360deg);
+      transition: opacity var(--transition);
+      animation: rotate var(--spark) linear infinite both;
+    }
+
+    @keyframes rotate {
+      to { transform: rotate(90deg); }
+    }
+
+    .spark:after {
+      content: "";
+      position: absolute;
+      inset: var(--cut);
+      border-radius: 100px;
+    }
+
     .backdrop {
       position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: radial-gradient(
-        circle at center,
-        rgba(255,255,255,0.2),
-        transparent 60%
-      );
-      filter: blur(8px);
-      z-index: 0;
+      inset: var(--cut);
+      background: var(--bg);
+      border-radius: 100px;
+      transition: background var(--transition) opacity var(--transition);
       pointer-events: none;
     }
+
     .text {
-      position: relative;
-      z-index: 2;
+      translate: 2% -6%;
+      letter-spacing: 0.01ch;
+      background: linear-gradient(
+        90deg,
+        hsl(0 0% calc((var(--active) * 100%) + 65%)),
+        hsl(0 0% calc((var(--active) * 100%) + 26%))
+      );
+      -webkit-background-clip: text;
+      color: #fff;
+      transition: background var(--transition);
+      font-family: 'Jost';
+      font-weight: 300;
+    }
+
+    .spark-button:hover,
+    .spark-button:focus-visible {
+      --active: 1;
     }
   </style>
 </head>
 <body>
-  <button class="beam-button">
-    <span class="beam-container"><span class="beam"></span></span>
+  <button class="spark-button">
+    <span class="spark__container">
+      <span class="spark"></span>
+    </span>
     <span class="backdrop"></span>
     <span class="text">Click Me</span>
   </button>
